Fix display of searchbar icon issue on mobile

--- a/src/components/SearchBar/searchbar.css
+++ b/src/components/SearchBar/searchbar.css
@@ -51,11 +51,35 @@
     cursor: pointer;
     padding: 10px 40px; 
   }
+
+
+
+  .searchbar-icon {
+    margin-right: 8px;
+    margin-left: 12px;
+    color: #ffffff;
+    background-color: #5f2eea;
+    height: 19px;
+    width: 19px;
+    border-radius: 8px;
+    padding: 10px;
+    cursor: pointer;
+  }
   
   @media (max-width: 768px) {
     .search-bar {
-      flex-direction: column;
-      align-items: flex-start; 
+      flex-direction:row;
+      align-items: flex-start;      
+    
+    }
+
+    .searchbar-icon{
+      margin-bottom: 10px;
+      padding: 16px;
+      cursor: pointer;
+      height: 19px;
+      width: 19px;
+      
     }
   
     .search-input {
@@ -69,4 +93,9 @@
       width: 100%;
     }
   }
+  
+
+
+
+
   
